--- a/ThursdayAfternoon/Views/Presentation/create.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/create.cshtml
@@ -19,6 +19,7 @@
         <input type="text" name="Title" class="input-block-level" placeholder="Title" value="@Model.Title" />
 
         <button class="btn btn-inverse" type="submit">Edit</button>
+        <a href="@Url.Content("~/presentation")" class="btn btn-inverse">Cancel</a>
     </form>
     </div>
 </div>
