--- a/ThursdayAfternoon/Views/Presentation/edit.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/edit.cshtml
@@ -26,6 +26,7 @@
             @Html.Hidden("OwnerId")
             
             <button class="btn btn-inverse" type="submit">Edit</button>
+            <a href="@Url.Content("~/presentation")" class="btn btn-inverse">Cancel</a>
         </form>
     </div>
 </div>
