--- a/ThursdayAfternoon/Views/Shared/_navbar.cshtml
+++ b/ThursdayAfternoon/Views/Shared/_navbar.cshtml
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="@Url.Content("~/")">Project name</a>
+            <a class="brand" href="@Url.Content("~/")">Thursday Afternoon</a>
             <div class="nav-collapse collapse pull-right">
                 <ul class="nav">
                     <li class="active"><a href="@Url.Content("~/")">Home</a></li>
