--- a/ThursdayAfternoon/Views/Index/login.cshtml
+++ b/ThursdayAfternoon/Views/Index/login.cshtml
@@ -5,22 +5,31 @@
     Layout = "shared/_layout";
 }
 
-<h2>Login</h2>
-<div class="row-fluid">
-    <div class="span4">
-        @Html.ValidationSummary()
+<h1>Login</h1>
+
+<div class="row">
+    <div class="col-lg-4">
         <form class="@Url.Content("~/login")" method="post">
-            <h2 class="form-signin-heading">Please sign in</h2>
+            <div class="form-group">
+                <label for="Username">Username</label>
+                @Html.TextBox("Username", "form-control", "Username")
+            </div>
+            
+            <div class="form-group">
+                <label for="Password">Password</label>
+                @Html.Password("Password", "form-control", "Password")
+            </div>
+            
+            <div class="checkbox">
+                <label for="RememberMe">
+                    @Html.CheckBox("RememberMe", true) 
+                    Remember me
+                </label>
+            </div>
 
-            @Html.TextBox("Username", "input-block-level", "Username")
-            @Html.Password("Password", "input-block-level", "Password")
-            <label class="checkbox" for="RememberMe">
-                @Html.CheckBox("RememberMe", true) Remember me
-            </label>
-
-            <button class="btn btn-inverse" type="submit">Sign in</button>
+            <button class="btn btn-default" type="submit">Sign in</button>
         </form>
-        
+
         <a href="/register">Register &rarr;</a>
     </div>
 </div>
