--- a/ThursdayAfternoon/Views/Presentation/create.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/create.cshtml
@@ -1,25 +1,29 @@
-﻿@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Presentation.EditViewModel>
+﻿@using ThursdayAfternoon.Nancy.Extensions
+@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Presentation.EditViewModel>
 @{
     Layout = "shared/_layout";
     ViewBag.Title = "Create new presentation";
 }
 
+<h1 class="page-title">Create Presentation</h1>
+
 <div class="row">
-    <div class="span12">
-        <h1 class="page-title">Create new presentation</h1>
-    </div>
-</div>
+    <div class="col-lg-8">
+        <form class="@Url.Content("~/presentation/create/")" method="post">
+            <div class="form-group">
+                <label for="Title">Title</label>
+                @Html.TextBox("Title", "form-control", "Title")
+            </div>
 
-<div class="row-fluid">
-    <div class="span4">
-        <p>Slides: --</p>
-    </div>
-    <div class="span8">
-    <form class="@Url.Content("~/presentation/create/")" method="post">
-        <input type="text" name="Title" class="input-block-level" placeholder="Title" value="@Model.Title" />
+            <div class="form-group">
+                <label for="Description">Description</label>
+                @Html.TextBox("Description", "form-control", "Description")
+            </div>
 
-        <button class="btn btn-inverse" type="submit">Edit</button>
-        <a href="@Url.Content("~/presentation")" class="btn btn-inverse">Cancel</a>
-    </form>
+            <button class="btn btn-default" type="submit">Edit</button>
+            <a href="@Url.Content("~/presentation")" class="btn btn-inverse">Cancel</a>
+        </form>
+    </div>
+    <div class="col-lg-4">
     </div>
 </div>
