Fixed mobile nav position

--- a/ThursdayAfternoon/Views/Shared/_navbar.cshtml
+++ b/ThursdayAfternoon/Views/Shared/_navbar.cshtml
@@ -10,7 +10,7 @@
 
         <a class="navbar-brand" href="@Url.Content("~/")">Thursday Afternoon</a>
 
-        <div class="nav-collapse collapse navbar-responsive-collapse pull-right">
+        <div class="nav-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="@Url.Content("~/")">Home</a></li>
                 <li><a href="@Url.Content("~/presentation")">Presentations</a></li>
