--- a/ThursdayAfternoon/Content/app.css
+++ b/ThursdayAfternoon/Content/app.css
@@ -64,6 +64,10 @@ label {
     text-transform: uppercase;
   }
 
+  .navbar .nav-collapse {
+    float: right;
+  }
+
   .navbar .nav > li > a {
     color: #fff;
     font-size: 16px;
@@ -99,5 +103,9 @@ label {
 
   .container {
     padding: 20px;
+  }
+
+  .navbar .nav-collapse {
+    float: none;
   }
 }
