Added user first & last name. Display user name according to details available

--- a/ThursdayAfternoon/Views/Presentation/index.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/index.cshtml
@@ -1,10 +1,11 @@
-﻿@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Presentation.IndexViewModel>
+﻿@using ThursdayAfternoon.Infrastructure.Extensions
+@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Presentation.IndexViewModel>
 @{
     ViewBag.Title = "Home";
     Layout = "shared/_layout";
 }
 
-<h1>@Model.User.UserName <small>@Model.Presentations.Count presentations</small></h1>
+<h1>@Model.User.GetName(fullname: true) <small>@Model.Presentations.Count presentations</small></h1>
 
 <div class="row">
     <div class="col-lg-4">
@@ -16,11 +17,10 @@
                 <li><a href="@Url.Content("~/presentation/view/" + presentation.Id)">@presentation.Title</a> <small><a href="@Url.Content("~/presentation/edit/" + presentation.Id)">edit</a></small></li>
             }
         </ul>
-
-        <p><a href="@Url.Content("~/presentation/create")" class="btn btn-default btn-mini">Create new</a></p>
     </div>
     <div class="col-lg-8">
         <h2>Heading</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a href="@Url.Content("~/presentation/create")" class="btn btn-default">Create new</a></p>
     </div>
 </div>
