--- a/ThursdayAfternoon/Views/Presentation/add-slide.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/add-slide.cshtml
@@ -1,13 +1,13 @@
-﻿@using ThursdayAfternoon.Nancy.Extensions
-@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Presentation.EditViewModel>
+﻿@*@using ThursdayAfternoon.Nancy.Extensions
+@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Presentation.EditViewModel>*@
 @{
     Layout = "shared/_layout";
-    ViewBag.Title = "Edit" + @Model.Title;
+    ViewBag.Title = "Add Slide";
 }
 
-<h1>Edit @Model.Title</h1>
+<h1>Add Slide</h1>
 
-<div class="row">
+@*<div class="row">
     <div class="col-lg-8">
         <form class="@Url.Content("~/presentation/edit/" + @Model.Id)" method="post">
             <div class="form-group">
@@ -30,10 +30,5 @@
     </div>
     <div class="col-lg-4">
         <p>Slides: --</p>
-        @foreach (var slide in Model.Slides)
-        {
-            <p><a href="@Url.Content("~/presentation/edit/" + @Model.Id + "/slide/" + @slide.Id)" class="btn">Test</a></p>
-        }
-        <p><a href="@Url.Content("~/presentation/edit/" + @Model.Id + "/slide")" class="btn">Add new Slide</a></p>
     </div>
-</div>
+</div>*@
