Incorrect button text

--- a/ThursdayAfternoon/Views/Presentation/create.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/create.cshtml
@@ -20,7 +20,7 @@
                 @Html.TextBox("Description", "form-control", "Description")
             </div>
 
-            <button class="btn btn-default" type="submit">Edit</button>
+            <button class="btn btn-default" type="submit">Create</button>
             <a href="@Url.Content("~/presentation")" class="btn btn-inverse">Cancel</a>
         </form>
     </div>
