--- a/ThursdayAfternoon/Views/Slide/edit.cshtml
+++ b/ThursdayAfternoon/Views/Slide/edit.cshtml
@@ -1,35 +1,34 @@
-﻿@*@using ThursdayAfternoon.Nancy.Extensions
-@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Presentation.EditViewModel>*@
-@inherits NancyRazorViewBase<int>
+﻿@using ThursdayAfternoon.Nancy.Extensions
+@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Slide.EditViewModel>
 @{
     Layout = "shared/_layout";
     ViewBag.Title = "Edit Slide";
 }
 
-<h1>Edit Slide @Model.ToString()</h1>
+<h1>Edit @Model.Title</h1>
 
-@*<div class="row">
+<div class="row">
     <div class="col-lg-8">
-        <form class="@Url.Content("~/presentation/edit/" + @Model.Id)" method="post">
+        <form class="@Url.Content("~/slide/edit/" + @Model)" method="post">
             <div class="form-group">
                 <label for="Title">Title</label>
                 @Html.TextBox("Title", "form-control", "Title")
             </div>
 
             <div class="form-group">
-                <label for="Description">Description</label>
-                @Html.TextBox("Description", "form-control", "Description")
+                <label for="Content">Content</label>
+                @Html.TextBox("Content", "form-control", "Content")
             </div>
 
             @Html.Hidden("CreatedOn")
             @Html.Hidden("ModifiedOn")
             @Html.Hidden("OwnerId")
+            @Html.Hidden("SlideIds")
 
             <button class="btn btn-default" type="submit">Edit</button>
             <a href="@Url.Content("~/presentation")" class="btn">Cancel</a>
         </form>
     </div>
     <div class="col-lg-4">
-        <p>Slides: --</p>
     </div>
-</div>*@
+</div>
