--- a/ThursdayAfternoon/Views/Index/login.cshtml
+++ b/ThursdayAfternoon/Views/Index/login.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-lg-4">
-        <form class="@Url.Content("~/login")" method="post">
+        <form action="@Url.Content("~/login")" method="post">
             <div class="form-group">
                 <label for="Username">Username</label>
                 @Html.TextBox("Username", "form-control", "Username")
