--- a/ThursdayAfternoon/Views/Slide/create.cshtml
+++ b/ThursdayAfternoon/Views/Slide/create.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-lg-8">
-        <form class="@Url.Content("~/slide/create/")" method="post">
+        <form action="@Url.Content("~/slide/create/")" method="post">
             <div class="form-group">
                 <label for="Title">Title</label>
                 @Html.TextBox("Title", "form-control", "Title")
