Cancel button urls pointing to right location

--- a/ThursdayAfternoon/Views/Slide/create.cshtml
+++ b/ThursdayAfternoon/Views/Slide/create.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Add Slide";
 }
 
-<h1>Add Slide @Model.ToString()</h1>
+<h1>Add Slide</h1>
 
 <div class="row">
     <div class="col-lg-8">
@@ -21,7 +21,7 @@
             </div>
 
             <button class="btn btn-default" type="submit">Create</button>
-            <a href="@Url.Content("~/presentation")" class="btn btn-inverse">Cancel</a>
+            <a href="@Url.Content("~/presentation/edit/" + @Model.PresentationId)" class="btn btn-inverse">Cancel</a>
         </form>
     </div>
     <div class="col-lg-4">
