Started implementing view presentation page

--- a/ThursdayAfternoon/Content/bootstrap-overrides.css
+++ b/ThursdayAfternoon/Content/bootstrap-overrides.css
@@ -1,7 +1,14 @@
 ﻿body {
-
 }
 
 * {
   border-radius: 0 !important;
+}
+
+.carousel-inner > .item {
+  min-height: 600px;
+}
+
+.carousel-caption {
+  top: 20px;
 }
