Added TextArea HtmlHelper extension. updated views

--- a/ThursdayAfternoon/Views/Presentation/create.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/create.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label for="Description">Description</label>
-                @Html.TextBox("Description", "form-control", "Description")
+                @Html.TextArea("Description", "form-control", 10, 15)
             </div>
 
             <button class="btn btn-default" type="submit">Create</button>
