--- a/ThursdayAfternoon/Views/Presentation/edit.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/edit.cshtml
@@ -19,7 +19,7 @@
 
             <div class="form-group">
                 <label for="Description">Description</label>
-                @Html.TextBox("Description", "form-control", "Description")
+                @Html.TextArea("Description", "form-control", 10, 15)
             </div>
 
             @Html.Hidden("CreatedOn")
