--- a/ThursdayAfternoon/Views/Slide/edit.cshtml
+++ b/ThursdayAfternoon/Views/Slide/edit.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label for="Content">Content</label>
-                @Html.TextBox("Content", "form-control", "Content")
+                @Html.TextArea("Content", "form-control", 10, 15)
             </div>
 
             @Html.Hidden("CreatedOn")
