--- a/ThursdayAfternoon/Views/Slide/create.cshtml
+++ b/ThursdayAfternoon/Views/Slide/create.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label for="Content">Content</label>
-                @Html.TextBox("Content", "form-control", "Content")
+                @Html.TextArea("Content", "form-control", 10, 15)
             </div>
 
             <button class="btn btn-default" type="submit">Create</button>
