Edit presentation layout

--- a/ThursdayAfternoon/Views/Presentation/edit.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/edit.cshtml
@@ -32,7 +32,7 @@
         </form>
     </div>
     <div class="col-lg-4">
-        <p>Slides: @slideCount</p>
+        <p>Slides</p>
         <p><a href="@Url.Content("~/slide/create/" + @Model.Id)" class="btn">Add new Slide</a></p>
   
         <ul>
@@ -45,7 +45,7 @@
         }
         else
         {
-            <li></li>
+            <li>No Slides</li>
         }
         </ul>
     </div>
