Updated cancel link text

--- a/ThursdayAfternoon/Views/Presentation/create.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/create.cshtml
@@ -21,7 +21,7 @@
             </div>
 
             <button class="btn btn-default" type="submit">Create</button>
-            <a href="@Url.Content("~/presentation")" class="btn btn-inverse">Cancel</a>
+            <a href="@Url.Content("~/presentation")" class="btn">&larr; back to Presentations</a>
         </form>
     </div>
     <div class="col-lg-4">
