--- a/ThursdayAfternoon/Views/Presentation/edit.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/edit.cshtml
@@ -28,7 +28,7 @@
             @Html.Hidden("SlideIds")
 
             <button class="btn btn-default" type="submit">Edit</button>
-            <a href="@Url.Content("~/presentation")" class="btn">Cancel</a>
+            <a href="@Url.Content("~/presentation")" class="btn">&larr; back to Presentations</a>
         </form>
     </div>
     <div class="col-lg-4">
