--- a/ThursdayAfternoon/Views/Slide/create.cshtml
+++ b/ThursdayAfternoon/Views/Slide/create.cshtml
@@ -21,7 +21,7 @@
             </div>
 
             <button class="btn btn-default" type="submit">Create</button>
-            <a href="@Url.Content("~/presentation/edit/" + @Model.PresentationId)" class="btn btn-inverse">Cancel</a>
+            <a href="@Url.Content("~/presentation/edit/" + @Model.PresentationId)" class="btn">&larr; back to Presentation</a>
         </form>
     </div>
     <div class="col-lg-4">
