--- a/ThursdayAfternoon/Views/Index/index.cshtml
+++ b/ThursdayAfternoon/Views/Index/index.cshtml
@@ -1,25 +1,19 @@
-﻿@inherits NancyRazorViewBase<dynamic>
+﻿@using ThursdayAfternoon.Infrastructure.Extensions
+@inherits NancyRazorViewBase<ThursdayAfternoon.ViewModels.Index.IndexViewModel>
 @{
     ViewBag.Title = "Home";
     Layout = "shared/_layout";
 }
 
-<h1>Thursday <small>afternoon</small></h1>
+<h1>Latest Presentations</h1>
 
 <div class="row">
-    <div class="col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-    </div>
-    <div class="col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-    </div>
-    <div class="col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-        <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-    </div>
+    @foreach (var presentation in Model.Presentations)
+    {
+        <div class="col-lg-4">
+            <h2>@presentation.Title <small>@presentation.CreatedOn.ToLongDateString()</small></h2>
+            <p>@presentation.Description.StripTagsAndTruncate()</p>
+            <p><a class="btn btn-default" href="@Url.Content("~/presentation/view/" + presentation.Id)">View details &raquo;</a></p>
+        </div>
+    }
 </div>
