--- a/ThursdayAfternoon/Content/app.css
+++ b/ThursdayAfternoon/Content/app.css
@@ -79,7 +79,7 @@ label {
     text-transform: uppercase;
   }
 
-  .navbar .nav-collapse {
+  .navbar .navbar-collapse {
     float: right;
   }
 
@@ -120,7 +120,7 @@ label {
     padding: 20px;
   }
 
-  .navbar .nav-collapse {
+  .navbar .navbar-collapse {
     float: none;
   }
 }
