--- a/ThursdayAfternoon/Views/Presentation/create.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/create.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label for="Description">Description</label>
-                @Html.TextArea("Description", "form-control tinymce", 10, 15)
+                @Html.TextArea("Description", "form-control", 10, 15)
             </div>
 
             <button class="btn btn-default" type="submit">Create</button>
@@ -27,12 +27,3 @@
     <div class="col-lg-4">
     </div>
 </div>
-
-@section scripts {
-    @{
-        WriteLiteral(Bundle.JavaScript()
-            .Add("~/scripts/tinymce/jquery.tinymce.min.js")
-            .Add("~/scripts/tinymce-config.js")
-            .Render("~/scripts/tinymce_#.js"));
-    }
-}
