--- a/ThursdayAfternoon/Views/Presentation/index.cshtml
+++ b/ThursdayAfternoon/Views/Presentation/index.cshtml
@@ -11,16 +11,19 @@
     <div class="col-lg-4">
         <h2>Presentations</h2>
 
-        <ul>
+        <div class="list-group">
             @foreach (var presentation in Model.Presentations)
             {
-                <li><a href="@Url.Content("~/presentation/view/" + presentation.Id)">@presentation.Title</a> <small><a href="@Url.Content("~/presentation/edit/" + presentation.Id)">edit</a></small></li>
+                <a href="@Url.Content("~/presentation/edit/" + presentation.Id)" class="list-group-item">
+                    <span class="badge">@presentation.Slides.Count</span>
+                    @presentation.Title
+                </a>
             }
-        </ul>
+        </div>
     </div>
     <div class="col-lg-8">
         <h2>Heading</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a href="@Url.Content("~/presentation/create")" class="btn btn-default">Create new</a></p>
+        <p><a href="@Url.Content("~/presentation/create")" class="btn btn-default btn-sm">Create new</a></p>
     </div>
 </div>
