--- a/ThursdayAfternoon/Content/app.css
+++ b/ThursdayAfternoon/Content/app.css
@@ -22,6 +22,7 @@ body,
 /***** Helpers ******************************/
 #fullscreen {
   color: #de5e60;
+  font-size: 20px;
 }
 .fullscreen {
   position: absolute;
